add links with Rails link_to

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -7,3 +7,7 @@
   <strong>Text:</strong>
   <%= @article.text %>
 </p>
+
+<%= link_to 'Back', articles_path %>
+
+<!-- If you want to link to an action in the same controller, you don't need to specify the :controller option, as Rails will use the current controller by default. -->
