--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -2,6 +2,23 @@
 
 <%= form_for :article, url: articles_path do|f| %>
 <!-- creates a new form, cool. articles_path helper directs submit button to post to /articles instead of default, which was '/articles/new' before adding the 'url: articles_path' part -->
+
+  <% if @article.errors.any? %>
+    <div id="error_explanation">
+      <h2>
+        <%= pluralize(@article.errors.count, "error") %> prohibited this article from being saved:
+        # pluralize method is badass!
+      </h2>
+
+      <ul>
+        <% @article.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+
   <p>
     <%= f.label :title %><br>
     <%= f.text_field :title %>
