--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,13 +1,13 @@
-<h1>New Article</h1>
+<h1>Edit Article</h1>
 
-<%= form_for :article, url: articles_path do|f| %>
-<!-- creates a new form, cool. articles_path helper directs submit button to post to /articles instead of default, which was '/articles/new' before adding the 'url: articles_path' part -->
+<%= form_for :article, url: articles_path(@article), method: patch do |f| %>
+<!-- this line got much crazier for edit, adding @article argument and patch to one from #new -->
+
 
   <% if @article.errors.any? %>
     <div id="error_explanation">
       <h2>
         <%= pluralize(@article.errors.count, "error") %> prohibited this article from being saved:
-        <!-- pluralize method is badass! -->
       </h2>
 
       <ul>
@@ -18,7 +18,6 @@
     </div>
   <% end %>
 
-<!-- Rails automatically wraps fields that contain an error with a div with class field_with_errors. You can define a css rule to make them standout. -->
 
   <p>
     <%= f.label :title %><br>
@@ -33,6 +32,7 @@
   <p>
     <%= f.submit %>
   </p>
+
 <% end %>
 
 <%= link_to 'Back', articles_path %>
