add missing colon to method: :patch

--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Edit Article</h1>
 
-<%= form_for :article, url: articles_path(@article), method: patch do |f| %>
+<%= form_for :article, url: articles_path(@article), method: :patch do |f| %>
 <!-- this line got much crazier for edit, adding @article argument and patch to one from #new -->
 
 
