--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -8,6 +8,7 @@
   <%= @article.text %>
 </p>
 
+<%= link_to 'Edit', edit_article_path(@article) %>
 <%= link_to 'Back', articles_path %>
 
 <!-- If you want to link to an action in the same controller, you don't need to specify the :controller option, as Rails will use the current controller by default. -->
