--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,41 +1,13 @@
 <h1>Edit Article</h1>
 
-<%= form_for :article, url: article_path(@article), method: :patch do |f| %>
+<%= render 'form' %>
+
+<%# form_for :article, url: article_path(@article), method: :patch do |f| %>
 <!-- this line got crazier for edit, adding @article argument and patch to one from #new -->
 
 <!-- The first parameter of form_for can be an object, say, @article which would cause the helper to fill in the form with the fields of the object. Passing in a symbol (:article) with the same name as the instance variable (@article) also automagically leads to the same behavior. This is what is happening here. More details can be found in form_for documentation. -->
 
 <!-- You don't need to pass all attributes to update. For example, if you'd call @article.update(title: 'A new title') Rails would only update the title attribute, leaving all other attributes untouched. -->
 
-  <% if @article.errors.any? %>
-    <div id="error_explanation">
-      <h2>
-        <%= pluralize(@article.errors.count, "error") %> prohibited this article from being saved:
-      </h2>
-
-      <ul>
-        <% @article.errors.full_messages.each do |msg| %>
-          <li><%= msg %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-
-  <p>
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
-  </p>
-
-  <p>
-    <%= f.label :text %><br>
-    <%= f.text_area :text %>
-  </p>
-
-  <p>
-    <%= f.submit %>
-  </p>
-
-<% end %>
 
 <%= link_to 'Back', articles_path %>
