--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,38 +1,13 @@
 <h1>New Article</h1>
 
-<%= form_for :article, url: articles_path do|f| %>
+<%= render 'form' %>
+
+<%= link_to 'Back', articles_path %>
+
+<%# form_for :article, url: articles_path do|f| %>
 <!-- creates a new form, cool. articles_path helper directs submit button to post to /articles instead of default, which was '/articles/new' before adding the 'url: articles_path' part -->
 
-  <% if @article.errors.any? %>
-    <div id="error_explanation">
-      <h2>
-        <%= pluralize(@article.errors.count, "error") %> prohibited this article from being saved:
-        <!-- pluralize method is badass! -->
-      </h2>
-
-      <ul>
-        <% @article.errors.full_messages.each do |msg| %>
-          <li><%= msg %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
+<!-- pluralize method is badass! -->
 
 <!-- Rails automatically wraps fields that contain an error with a div with class field_with_errors. You can define a css rule to make them standout. -->
 
-  <p>
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
-  </p>
-
-  <p>
-    <%= f.label :text %><br>
-    <%= f.text_area :text %>
-  </p>
-
-  <p>
-    <%= f.submit %>
-  </p>
-<% end %>
-
-<%= link_to 'Back', articles_path %>
