add destroy route and link

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -30,3 +30,5 @@
     <%= f.submit %>
   </p>
 <% end %>
+
+<!-- Rails says "Update Post" or "Create Post" smartly depending on which form, badass -->
