--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -21,3 +21,6 @@
     </tr>
   <% end %>
 </table>
+
+
+<!-- Here [in Destroy link] we're using link_to in a different way. We pass the named route as the second argument, and then the options as another argument. The :method and :'data-confirm' options are used as HTML5 attributes so that when the link is clicked, Rails will first show a confirm dialog to the user, and then submit the link with method delete. This is done via the JavaScript file jquery_ujs which is automatically included into your application's layout (app/views/layouts/application.html.erb) when you generated the application. Without this file, the confirmation dialog box wouldn't appear. -->
