--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -8,18 +8,10 @@
   <%= @article.text %>
 </p>
 
-<h2>Comments</h2>
-<% @article.comments.each do |comment| %>
-  <p>
-    <strong>Commenter:</strong>
-    <%= comment.commenter %>
-  </p>
 
-  <p>
-    <strong>Comment:</strong>
-    <%= comment.body %>
-  </p>
-<% end %>
+<h2>Comments</h2>
+<%= render @article.comments %>
+
 
 <h2>Add a comment:</h2>
 <%= form_for([@article, @article.comments.build]) do |f| %>
@@ -37,10 +29,6 @@
     <%= f.submit %>
   </p>
 <% end %>
-
-
-
-
 
 <%= link_to 'Edit', edit_article_path(@article) %>
 <%= link_to 'Back', articles_path %>
