--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -14,23 +14,15 @@
 
 
 <h2>Add a comment:</h2>
-<%= form_for([@article, @article.comments.build]) do |f| %>
-  <p>
-    <%= f.label :commenter %><br>
-    <%= f.text_field :commenter %>
-  </p>
+<%= render 'comments/form' %>
 
-  <p>
-    <%= f.label :body %><br>
-    <%= f.text_area :body %>
-  </p>
-
-  <p>
-    <%= f.submit %>
-  </p>
-<% end %>
 
 <%= link_to 'Edit', edit_article_path(@article) %>
 <%= link_to 'Back', articles_path %>
 
+
 <!-- If you want to link to an action in the same controller, you don't need to specify the :controller option, as Rails will use the current controller by default. -->
+
+<!-- The second render just defines the partial template we want to render, comments/form. Rails is smart enough to spot the forward slash in that string and realize that you want to render the _form.html.erb file in the app/views/comments directory. -->
+
+<!-- The @article object is available to any partials rendered in the view because we defined it as an instance variable. -->
